# eventql-parser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: pr.yml
src/: analysis.rs  ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs
src/tests/: analysis.rs  lexer.rs  mod.rs  parser.rs
src/tests/resources/: agg_must_use_source_bound.eql  aggregate_with_sourced_bases_props.eql  from_events_with_distinct.eql  from_events_with_group_by_and_having.eql  invalid_type_contains.eql  invalid_type_conversion_expr.eql  optional_param_func.eql  parser_binary_op.eql  reject_agg_in_predicate.eql  type_conversion_custom_type.eql  valid_agg_usage.eql  valid_contains.eql  valid_type_conversion-weird-case.eql  valid_type_conversion.eql  with_comment.eql
src/tests/snapshots/: event_query_lang__tests__lexer__lexer_all_kind.snap  event_query_lang__tests__parser__parse_binary_op.snap  event_query_lang__tests__parser__parse_from_events_nested_data.snap  event_query_lang__tests__parser__parse_from_events_using_subquery.snap  event_query_lang__tests__parser__parse_from_events_where_subject_project_record_with_count.snap  event_query_lang__tests__parser__parse_from_events_with_top_identity_projection.snap  event_query_lang__tests__parser__parse_from_events_with_type_to_project_record.snap  event_query_lang__tests__parser__parser_unhinged_unary_op.snap  eventql_parser__tests__analysis__analyze_agg_must_use_source_bound.snap  eventql_parser__tests__analysis__analyze_invalid_type_contains.snap  eventql_parser__tests__analysis__analyze_invalid_type_conversion_custom_type.snap  (+33 more)
