[package]

name = "eventql-parser"
version = "0.1.3"
authors = ["Yorick Laupa <yo.eight@gmail.com>"]
description = "EventQL Lexer and Parser"
homepage = "https://github.com/YoEight/eventql-parser"
repository = "https://github.com/YoEight/eventql-parser"
documentation = "https://docs.rs/eventql-parser/"
keywords = ["eventql", "lexer", "parser", "events", "event-sourcing"]
license = "MIT"
edition = "2024"

[dependencies]
thiserror = "2"
nom = "8"
nom_locate = "5"
unicase = "2"

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies.insta]
version = "1.44"
features = ["yaml"]
